--- a/src/app/components/vacation-boarding/vacation-boarding.component.html
+++ b/src/app/components/vacation-boarding/vacation-boarding.component.html
@@ -1,6 +1,16 @@
+<!-- Loader Start -->
 <div id="preloader" *ngIf="loading">
-   <div id="status">&nbsp;</div>
+   <div id="status">
+       <div id="cms-loadding">
+           <div class="loading-spinner">
+               <div class="cms-bounce1"></div>
+               <div class="cms-bounce2"></div>
+               <div class="cms-bounce3"></div>
+           </div>
+       </div>
+   </div>
 </div>
+<!-- Loader End -->
 <div class="dc_pg_spcHead">
    <div class="main-container">
       <div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
@@ -43,7 +53,7 @@
       <div class="main-container">
          <div class="vacationbox_sec ">
             <div class="row rowSpace">
-               <div class="col-md-6" *ngFor="let img of bordingdetails">
+               <div class="col-sm-6 col-md-6" *ngFor="let img of bordingdetails">
                  
                   <div class="vactoionBoarding_sec">
                      <div class="vacationImg_Wrap">
