--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -1,6 +1,16 @@
+<!-- Loader Start -->
 <div id="preloader" *ngIf="loading">
-   <div id="status">&nbsp;</div>
+   <div id="status">
+       <div id="cms-loadding">
+           <div class="loading-spinner">
+               <div class="cms-bounce1"></div>
+               <div class="cms-bounce2"></div>
+               <div class="cms-bounce3"></div>
+           </div>
+       </div>
+   </div>
 </div>
+<!-- Loader End -->
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
@@ -65,37 +75,45 @@
                    <form [formGroup]="career" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
                       <div class="row_gutter_30">
                          <div class="col-12">
-                            <label class="f-s-24 f-w-B cmslabel">What is your name?</label>
-                            <input type="text" class="form-control cmsfield" name="name" formControlName="name">
-                            <div *ngIf="f.name.errors && (f.name.dirty || f.name.touched)" >
-                              <div *ngIf="f.name.errors.required">Name is required</div>
-                           </div>
+                            <div class="position-relative">
+                              <label class="f-s-24 f-w-B cmslabel">What is your name?</label>
+                              <input type="text" class="form-control cmsfield" name="name" formControlName="name">
+                              <div *ngIf="f.name.errors && (f.name.dirty || f.name.touched)" >
+                                <div *ngIf="f.name.errors.required" class="errorMsg">Name is required</div>
+                             </div>
+                            </div>
                          </div>
                          <div class="col-12">
+                           <div class="position-relative">
                             <label class="f-s-24 f-w-B cmslabel">What is your Email Address?</label>
                             <input type="text" class="form-control cmsfield" name="email" formControlName="email">
                             <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
-                              <div *ngIf="f.email.errors.required">Email is required</div>
-                              <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                              <div *ngIf="f.email.errors.required" class="errorMsg">Email is required</div>
+                              <div *ngIf="f.email.errors.email" class="errorMsg">Email must be a valid email address</div>
+                          </div>
                           </div>
                          </div>
                          <div class="col-12">
+                           <div class="position-relative">
                             <label class="f-s-24 f-w-B cmslabel">Where can we reach you?</label>
                             <input type="text" class="form-control cmsfield" name="reach" formControlName="reach">
                             <div *ngIf="f.reach.errors && (f.reach.dirty || f.reach.touched)" >
-                              <div *ngIf="f.reach.errors.required">Address is required</div>
+                              <div *ngIf="f.reach.errors.required" class="errorMsg">Address is required</div>
+                          </div>
                           </div>
                          </div>
                          <div class="col-12">
+                           <div class="position-relative">
                             <label class="f-s-24 f-w-B cmslabel">Tell us something interesting about you</label>
                             <textarea class="form-control cmsfield tell" rows="5" name="tell_us" formControlName="tell_us"></textarea>
                             <div *ngIf="f.tell_us.errors && (f.tell_us.dirty || f.tell_us.touched)" >
-                              <div *ngIf="f.tell_us.errors.required">tell_us is required</div>                             
+                              <div *ngIf="f.tell_us.errors.required" class="errorMsg">tell_us is required</div>                             
+                            </div>
                             </div>
                          </div>
                          <div class="col-12">
                             <div class="d-flex justify-content-between">
-                               <div class="align-self-center">
+                               <div class="align-self-center position-relative w-100">
                                   <label for="file" class="sr-only">File</label>
                                   <div class="input-group ">
                                      <span class="input-group-btn">
@@ -109,6 +127,7 @@
                                         </div>
                                     
                                      </span>
+                                     <div class="errorMsg errorResume">
                                      <div *ngIf="f.resume.errors && (f.resume.dirty || f.resume.touched)" >
                                        <div *ngIf="f.resume.errors.required">Resume is required</div>
                                      </div>
@@ -117,6 +136,8 @@
                                        <div *ngIf="imageError == 1">Please Enter File size Upto 2Mb</div>
                                        <div *ngIf="imageError == 2">Please Enter Valid File Format (JPG, JPEG, png, PDF, DOC, DOCX )</div>
                                     </div>
+                                 </div>
+
                                      <!-- <div class="attaccms">
                                         <input type="text" name="filename" class="attachfield form-control font-rubik f-w-M" placeholder="Attach Resume" readonly>
                                      </div> -->
