--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,6 +1,16 @@
+<!-- Loader Start -->
 <div id="preloader" *ngIf="loading">
-   <div id="status">&nbsp;</div>
+   <div id="status">
+       <div id="cms-loadding">
+           <div class="loading-spinner">
+               <div class="cms-bounce1"></div>
+               <div class="cms-bounce2"></div>
+               <div class="cms-bounce3"></div>
+           </div>
+       </div>
+   </div>
 </div>
+<!-- Loader End -->
 <!-- topsection -->
 <div class="topSlider_sec" *ngIf="homepage.topsection">
     <div class="main-container">
@@ -8,10 +18,11 @@
           <div class="col-md-6 align-self-center">
              <div class="topBanner_sec">
                 <div class="bannerTxtWrap">
-                   <div class="titleWrap mrg-b-30 ">
+                   <div class="titleWrap mrg-b-30 " data-aos="fade-up"
+                   data-aos-delay="300" data-aos-duration="900">
                       <h1 class="f-w-B headingSec line_H_1"> {{homepage.topsection.heading}} </h1>
                    </div>
-                   <div class="hrLine mrg-b-30"></div>
+                   <div class="hrLine mrg-b-30" ></div>
                    <div class="bannerTxt" [innerHTML]="topsectionContent">
                       <!-- <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends. </p>
                       <p> We understand how you feel when you pooch is not feeling good. That’s why we exist. Get your four legged animal to visit us once and we will become friends. </p> -->
@@ -24,7 +35,7 @@
                 </div>
              </div>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-6  align-self-end">
              <div class="bannerImg_sec">
                 <img [src]="homepage.topsection.image.link" class="w-100" [alt]="homepage.topsection.image.alt" />
              </div>
@@ -51,7 +62,7 @@
                    <!-- <p> For all your beloved pets– dogs, cats, and more; we are here to serve as a safe, stress-free, and clean environment. Spread over 45000 sq. ft, your pet can enjoy the amenities at our one-stop full-service facility which is fully supervised to give them complete physical and emotional care </p> -->
                 </div>
                 <div class="btnSec">
-                   <a [href]="homepage.aboutsection.button_link" class="pagebtn f-w-B">
+                   <a [routerLink]="homepage.aboutsection.button_link" class="pagebtn f-w-B">
                    {{homepage.aboutsection.button_text}}
                    </a>
                 </div>
@@ -95,7 +106,7 @@
                 </div>
                 <div class="btnSec">
                    <div class="btnSec_wra d-inline">
-                      <a [href]="homepage.servicesection.button_1_link" class="pagebtn f-w-B">
+                      <a [routerLink]="homepage.servicesection.button_1_link" class="pagebtn f-w-B">
                      {{homepage.servicesection.button_1_text}}
                       </a>
                    </div>
@@ -110,7 +121,7 @@
           <div class="col-md-6">
              <div class="servicebox_sec">
                 <div class="row rowSpace" *ngIf="serviceList.length > 0">               
-                     <div class="col-md-6" *ngFor="let data of serviceList">
+                     <div class="col-6 col-md-6" *ngFor="let data of serviceList">
                         <div class="serviceBx bx-shadow text-center" [routerLink]="'ourservices/service-details/'+data.slug">
                            <div class="service_iconSec">
                               <img [src]="data.icon.link" class="w-100" [alt]="data.icon.alt">
@@ -144,7 +155,7 @@
                 <div class="bannerTxt" [innerHTML]="teamsectionContent">             
                 </div>
                 <div class="btnSec">
-                   <a [href]="homepage.teamsection.button_link" class="pagebtn f-w-B">
+                   <a [routerLink]="homepage.teamsection.button_link" class="pagebtn f-w-B">
                   {{homepage.teamsection.button_text}}
                    </a>
                 </div>
@@ -209,9 +220,17 @@
        <div class="row" >
           <div class="col-sm-6 col-md-4" *ngFor="let blog of homepage.pethealthsection.blogs;">
              <div class="pethealth-box">
-                <div class="img-wrap"><img [src]="blog.image.link" class="w-100" [alt]="blog.image.alt"/></div>
+                <div class="img-wrap">
+                  <a href="#"  target="_blank"  class="dc_blogLink d-block h-100">
+                     <img [src]="blog.image.link" class="w-100" [alt]="blog.image.alt"/>
+                  </a> 
+               </div>
                 <div class="detail">{{blog.category}} <span>{{blog.date}}</span></div>
-                <div class="title">{{blog.category}}</div>
+                <div class="title"> 
+                   <a href="#" target="_blank" class="dc_txtLink d-block transtn-1">
+                  {{blog.category}}
+                </a>
+               </div>
              </div>
           </div>         
        </div>
@@ -247,10 +266,18 @@
                 </div> -->
              </div>
           </div>
-          <div class="col-md-2 text-right">
-             <div class="app-store"><img src="{{homepage.footersection.app_store_image.link}}" alt="{{homepage.footersection.app_store_image.alt}}" /></div>
-             <div class="google-play"><img src="{{homepage.footersection.play_store_image.link}}" alt="{{homepage.footersection.play_store_image.alt}}" /></div>
-          </div>
+          <div class="col-md-2 text-md-right">
+            <div class="app-store">
+             <a href="" class="storeLink">
+             <img src="{{homepage.footersection.app_store_image.link}}" alt="{{homepage.footersection.app_store_image.alt}}" />
+           </a>
+           </div>
+            <div class="google-play">
+             <a href="" class="storeLink">
+             <img src="{{homepage.footersection.play_store_image.link}}" alt="{{homepage.footersection.play_store_image.alt}}" />
+           </a>
+           </div>
+         </div>
        </div>
     </div>
  </div>
