--- a/src/app/components/ourservices/ourservices.component.html
+++ b/src/app/components/ourservices/ourservices.component.html
@@ -1,6 +1,16 @@
+<!-- Loader Start -->
 <div id="preloader" *ngIf="loading">
-   <div id="status">&nbsp;</div>
+   <div id="status">
+       <div id="cms-loadding">
+           <div class="loading-spinner">
+               <div class="cms-bounce1"></div>
+               <div class="cms-bounce2"></div>
+               <div class="cms-bounce3"></div>
+           </div>
+       </div>
+   </div>
 </div>
+<!-- Loader End -->
 <div class="dc_pg_spcHead">
     <div class="main-container">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
@@ -35,7 +45,7 @@
     <div class="spacer_t_60 spacer_b_60">
        <div class="main-container">
           <div class="row rowSpace" *ngIf="services">
-             <div class="col-md-4" *ngFor="let data of services">
+             <div class="col-sm-6 col-md-4" *ngFor="let data of services">
                 <div class="dc_serviceBx transtn-1 mrg-b-30">
                    <div class="dc_serviceIcon_wrap text-center">
                       <div class="servieIcon">
