--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="spacer_t_30 spacer_b_30 bg-green footer" *ngIf="footerData">
     <div class="main-container">
-       <div class="row rowSpace align-items-center">
+      <div class="row rowSpace">
          <div class="col-md-6">
            <ul class="list-unstyled left-sec" >
              <li>
@@ -33,7 +33,7 @@
              <div class="col-md-4">
                <ul class="list-unstyled">
                  <div class="title">Quick link</div>
-                 <li *ngFor="let data of footerData.quicklinks;"><a [href]="data.link">{{data.name}}</a></li>
+                 <li *ngFor="let data of footerData.quicklinks;"><a [routerLink]="data.link">{{data.name}}</a></li>
                  <!-- <li><a href="#">Our Services</a></li>
                  <li><a href="#">Our Team</a></li>
                  <li><a href="#">Contact Us</a></li> -->
@@ -51,7 +51,7 @@
              <div class="col-md-4">
                <ul class="list-unstyled">
                <div class="title">Other</div>
-               <li *ngFor="let data of footerData.othermenu;"><a [href]="data.link">{{data.name}}</a></li>
+               <li *ngFor="let data of footerData.othermenu;"><a [routerLink]="data.link">{{data.name}}</a></li>
                <!-- <li><a href="#">Faqs</a></li>
                <li><a href="#">Careers</a></li>
                <li><a href="#">Press & Media</a></li>
@@ -64,14 +64,14 @@
        <div class="divider"></div>
        <div class="footer-bottom">
        <div class="row">
-         <div class="col">
+        <div class="col-md-8">
            <ul class="list-unstyled logo-sec d-inline-flex">
              <li>
-               <div><a href="/"><img [src]="footerData.details.footerlogo" alt="footer logo" /></a></div>
+               <div><a href="#"><img [src]="footerData.details.footerlogo" alt="footer logo" /></a></div>
                <div class="social-icon">
-                 <a [href]="footerData.details.facebook"><img src="./assets/images/fb.svg" alt="fb" /></a>
-                 <a [href]="footerData.details.instagram"><img src="./assets/images/insta.svg" alt="insta" /></a>
-                 <a [href]="footerData.details.linkedin"><img src="./assets/images/linkedin.svg" alt="linkin" /></a>
+                 <a [href]="footerData.details.facebook" target="_blank"><img src="./assets/images/fb.svg" alt="fb" /></a>
+                 <a [href]="footerData.details.instagram" target="_blank"><img src="./assets/images/insta.svg" alt="insta" /></a>
+                 <a [href]="footerData.details.linkedin" target="_blank"><img src="./assets/images/linkedin.svg" alt="linkin" /></a>
                </div>
              </li>
              <li [innerHTML]="footerlogocontent">
@@ -79,7 +79,7 @@
             </li>
            </ul>
          </div>
-         <div class="col-4">
+         <div class="col-md-4">
            <div>Get updates about your pets health and more</div>
            <div class="email-search">
             <form [formGroup]="email" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
@@ -91,7 +91,7 @@
              </div>
             <!-- f.email.invalid && (f.email.dirty || f.email.touched) -->
              <!-- hello {{f.email.errors.required}}  how {{f.email.errors.email}} -->
-             <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
+             <div class="errorMsg" *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
                   <div *ngIf="f.email.errors.required">Email is required</div>
                   <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
               </div>
