--- a/src/app/layout/page-loader/page-loader.component.html
+++ b/src/app/layout/page-loader/page-loader.component.html
@@ -1,5 +1,14 @@
+
 <!-- Loader Start -->
 <div id="preloader">
-    <div id="status">&nbsp;</div>
+<div id="status">
+<div id="cms-loadding">
+<div class="loading-spinner">
+<div class="cms-bounce1"></div>
+<div class="cms-bounce2"></div>
+<div class="cms-bounce3"></div>
+</div>
+</div>
+</div>
 </div>
 <!-- Loader End -->
