--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
-
+<!-- Loader Start -->
+<div id="preloader" *ngIf="loading">
+    <div id="status">
+        <div id="cms-loadding">
+            <div class="loading-spinner">
+                <div class="cms-bounce1"></div>
+                <div class="cms-bounce2"></div>
+                <div class="cms-bounce3"></div>
+            </div>
+        </div>
+    </div>
+ </div>
+ <!-- Loader End -->
+ <!-- topsection -->
 <router-outlet></router-outlet>
