--- a/src/app/components/vacation-boarding/vacation-boarding.component.html
+++ b/src/app/components/vacation-boarding/vacation-boarding.component.html
@@ -14,7 +14,7 @@
 <div class="dc_pg_spcHead" *ngIf="vacationdata">
    <div class="main-container">
       <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-      <div class="dc_pgHead_wrap text-center" style="background-image:url(/assets/images/head-bg.jpg);">
+      <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
          <h1 class="dc_pg_title">{{vacationdata.pagetitle}}</h1>
          <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
             <li class="breadcrumb-item"><a href="#">Home</a></li>
