--- a/src/assets/css/stylesheet.css
+++ b/src/assets/css/stylesheet.css
@@ -153,7 +153,7 @@ a:focus, .slick-slide:focus, button:focus{outline: none !important;    text-deco
 
 .headingSec
 {
-    font-size: 3.214vw;
+    font-size: 3.214vw;line-height: 1.3;
 }
 .mrg-b-30
 {
@@ -174,6 +174,9 @@ a:focus, .slick-slide:focus, button:focus{outline: none !important;    text-deco
     margin-bottom: 2.083vw;
     line-height: 1.3;
     text-align: justify;
+}
+.bannerTxt p:last-child {
+    
 }
 .headerSec {
     position: fixed;
@@ -331,7 +334,8 @@ box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.1);
 .team-wrap .img-1, .team-wrap .img-2{ max-width: 20.069vw; width: 100%; position: relative; }
 .team-wrap img{ border-radius: 2.22vw; box-shadow: 0 20px 40px 0 #F2ECE7; }
 .team-wrap .img-2{ margin-left: auto; margin-top: 1.38vw; }
-.team-wrap .content-wrap { position: absolute; right: -5.69vw; bottom: 1.041vw; padding: 1.18vw 1.18vw 1.45vw 1.18vw; box-shadow: 0 1.38vw 2.77vw 0 #F2ECE7; background-color: white; border-radius: 1.66vw; }
+.team-wrap .content-wrap { position: absolute; right: -5.69vw; bottom: 1.041vw; padding: 1.18vw 1.18vw 1.45vw 1.18vw; box-shadow: 0 1.38vw 2.77vw 0 #F2ECE7; background-color: white; border-radius: 1.66vw;    max-width: 16.857vw;
+    width: 100%; }
 .team-wrap .content-wrap .user-img { background-color: #2EAD5A; display: inline-block; height: 2.36vw; width: 2.36vw; border-radius: 100%; color: white; margin-right: 0.76vw; text-align: center; }
 .team-wrap .content-wrap .user-img img { vertical-align: middle; }
 .team-wrap .content-wrap .user-name { font-size: 0.97vw; font-weight:bold; }
@@ -355,7 +359,7 @@ box-shadow: 0px 0px 40px 0px rgba(0,0,0,0.1);
 .footer .left-sec .content p{ margin: 0;}
 .footer .left-sec .content{ padding-left: 2.222vw; }
 .footer .divider { background-color: rgba(255,255,255,0.2); width: 100%; height: 1px;   }
-.footer .footer-bottom { margin-top: 2.083vw; font-size:0.97vw; }
+.footer .footer-bottom { margin-top: 2.143vw; font-size:0.97vw; }
 .footer .footer-bottom ul.logo-sec li { display: inline-block;  }
 .footer .footer-bottom ul.logo-sec .social-icon { display: flex; justify-content: space-between; margin-top: 1.11vw; }
 .footer .footer-bottom ul.logo-sec li:last-child{ padding-left: 2.083vw; }
@@ -962,7 +966,7 @@ border-color: transparent;}
 .team-wrap .content-wrap .user-name{ font-size: 16px;}
 .team-wrap .content-wrap .user-live{font-size: 14px;    line-height: 1;padding-left: 15px;}
 .team-wrap .content-wrap .user-live:before{    height: 10px; width: 10px;}
-.team-wrap .content-wrap{right: 50%;bottom: -15px;padding: 15px;transform: translateX(50%); border-radius: 13px;max-width: 220px;
+.team-wrap .content-wrap{right: 50%;bottom: -15px;padding: 15px;transform: translateX(50%); border-radius: 13px;max-width: 260px;
 width: 100%;}
 .pethealth-box .detail{ font-size: 12px;margin-bottom: 0px;}
 .pethealth-box {margin-bottom: 25px;}
@@ -1091,6 +1095,7 @@ box-shadow: 10px 0px 9px -7px rgb(0 0 0 / 10%);transform: translateX(-105%);tran
 .teamDetailsTab .nav-link{font-size: 16px;padding: 10px 15px;border-radius: 8px;}
 .mrg-r-15 { margin-right:15px;}
 .teamSecTitle_wrap {margin-bottom: 15px;}
+.main-container .col-md-2 > div:last-child > .storeLink {max-width: 115px;}
 
 }
 
