--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -14,6 +14,7 @@
  <!-- Loader End -->
 <div class="dc_pg_spcHead">
     <div class="main-container" *ngIf="contact">
+      <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
        <div class="dc_pgHead_wrap text-center" style="background-image:url(assets/images/head-bg.jpg);">
           <h1 class="dc_pg_title">{{contact.pagetitle}}</h1>
           <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
@@ -21,28 +22,29 @@
              <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
           </ol>
        </div>
+     </fieldset>
     </div>
     <div class="contact_gurgoanWrap">
        <div class="dc_spacer_t_90 dc_spacer_b_60" *ngIf="contact">
           <div class="main-container">
              <div class="row row_gutter_30">
                 <div class="col-md-6">
-                   <div class="dc_txtSummary">
+                   <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                       <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="heading"></h2>
                    </div>
-                   <div class="hrLine mrg-b-30"></div>
+                   <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400"></div>
                 </div>
              </div>
              <div class="row row_gutter_30">
                 <div class="col-md-6">
-                   <div class="dc_txtSummary">
+                   <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                       <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="left_content">
                         
                       </div>
                    </div>
                 </div>
                 <div class="col-md-6">
-                   <div class="dc_txtSummary">
+                   <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
                       <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="right_content">
                          
                       </div>
@@ -52,7 +54,7 @@
           </div>
        </div>
        <div class="dc_spacer_t_30 dc_spacer_b_30">
-          <div class="main-container">
+          <div class="main-container" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
              <div class="btnSec text-center" *ngIf="contact">
                 <div class="btnSec_wra d-inline" *ngFor="let loc of locationList">
                    <a [href]="'contact/'+loc.slug" class="pagebtn pagebtngreen f-w-B">
@@ -68,33 +70,36 @@
                 <div class="col-md-6">
                    <div class="row rowSpace">
                       <div class="col-6 col-md-12">
-                         <div class="teamPage_wrap mar-b-30">
+                         <div class="teamPage_wrap mar-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                             <img [src]="even.image_1.link" [alt]="even.image_1.link" class="w-100">
                          </div>
                       </div>
                       <div class="col-6 col-md-12">
-                         <div class="teamPage_wrap mar-b-30">
+                         <div class="teamPage_wrap mar-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
                             <img  [src]="even.image_2.link" [alt]="even.image_2.link" class="w-100">
                          </div>
                       </div>
                    </div>
                 </div>
                 <div class="col-md-6">
-                   <div class="careers-form">
+                   <div class="careers-form" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                       <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
                        {{even.name | uppercase}}
                       </div>
                    </div>
-                   <div class="dc_txtSummary">
+                   <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                       <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="even.address_heading"></h2>
                    </div>
+                   <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300"> 
                    <div class="contnt opacity-5 mrg-b-30" [innerHTML]="even.address">                    
                    </div>
+
                    <div [innerHTML]="even.contacts">
-                   </div>                 
+                   </div>   
+                   </fieldset>
                    <div class="row rowSpace">
                       <div class="col-md-12">
-                         <div class="commonLinks text-center contactGet">
+                         <div class="commonLinks text-center contactGet" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                             <ul class="list-unstyled d-flex flex-wrap">
                                <li class="contactList-item">                    
                                     <div ngbDropdown class="dropSec position-relative directList">
@@ -107,7 +112,7 @@
                                         </div>
                                       </div>                      
                                </li>                            
-                               <li class="contactList-item" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                               <li class="contactList-item">
                                 <a [href]="even.button_2_link" class="pagebtn dc_btn_min f-w-B">{{even.button_2_text}}</a>
                                </li>
                             </ul>
@@ -124,21 +129,23 @@
           <div class="main-container" *ngIf="odddata">
              <div class="row row_gutter_30" *ngFor="let odd of odddata">
                 <div class="col-md-6">
-                   <div class="careers-form">
+                   <div class="careers-form" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
                       <div class="dccSubTitle f-w-B opacity-5 mrg-b-30 text-uppercase">
                        {{odd.name | uppercase}}
                       </div>
                    </div>
-                   <div class="dc_txtSummary">
+                   <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
                       <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="odd.address_heading"></h2>
                    </div>
+                    <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300"> 
                    <div class="contnt opacity-5 mrg-b-30" [innerHTML]="odd.address">
                    
                    </div>
                    <div [innerHTML]="odd.contacts">
 
-                   </div>                  
-                   <div class="commonLinks text-center contactGet">
+                   </div> 
+                      </fieldset>              
+                   <div class="commonLinks text-center contactGet" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                       <ul class="list-unstyled d-flex flex-wrap">
                          <li class="contactList-item">
                             <div ngbDropdown class="dropSec position-relative directList">
@@ -159,12 +166,12 @@
                 <div class="col-md-6">
                    <div class="row rowSpace">
                       <div class="col-6 col-md-12">
-                         <div class="teamPage_wrap mar-b-30">
+                         <div class="teamPage_wrap mar-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
                             <img [src]="odd.image_1.link" [alt]="odd.image_1.link" class="w-100">
                          </div>
                       </div>
                       <div class="col-6 col-md-12">
-                         <div class="teamPage_wrap mar-b-30">
+                         <div class="teamPage_wrap mar-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
                             <img [src]="odd.image_1.link" [alt]="odd.image_1.link" class="w-100">
                          </div>
                       </div>
