--- a/src/app/components/contact-delhi/contact-delhi.component.html
+++ b/src/app/components/contact-delhi/contact-delhi.component.html
@@ -60,7 +60,7 @@
        <div class="main-container">
           <div class="btnSec text-center pageCont" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
              <div class="btnSec_wra d-inline"  *ngFor="let cn of contactlist">
-                <a [href]="'contact/'+cn.slug" class="pagebtn pagebtngreen f-w-B">
+                <a [href]="'contact-us/'+cn.slug" class="pagebtn pagebtngreen f-w-B">
                 {{cn.name}}
                 </a>
              </div>
