--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -57,7 +57,7 @@
           <div class="main-container" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
              <div class="btnSec text-center" *ngIf="contact">
                 <div class="btnSec_wra d-inline" *ngFor="let loc of locationList">
-                   <a [href]="'contact/'+loc.slug" class="pagebtn pagebtngreen f-w-B">
+                   <a [href]="'contact-us/'+loc.slug" class="pagebtn pagebtngreen f-w-B">
                         {{loc.name}}
                    </a>
                 </div>               
