--- a/src/app/components/ourservices/ourservices.component.html
+++ b/src/app/components/ourservices/ourservices.component.html
@@ -62,7 +62,7 @@
                         
                       </div>
                       <div class="serviceReadMore_Wrap line_H_1 transtn-1">
-                         <a routerLink="/ourservices/service-details/{{data.slug}}" class="dc_readmore font-rubik">
+                         <a routerLink="/DCC-pet-services/{{data.slug}}" class="dc_readmore font-rubik">
                          Read More
                          </a>
                       </div>
