--- a/src/app/components/ourteam/ourteam.component.html
+++ b/src/app/components/ourteam/ourteam.component.html
@@ -69,7 +69,7 @@
                       
                     </div>
                     <div class="teamRead_more text-center line_H_1">
-                       <a routerLink="/Team-Details/{{data.slug}}" class="dc_readmore font-rubik f-w-M">
+                       <a routerLink="/our-pet-care-doctors/{{data.slug}}" class="dc_readmore font-rubik f-w-M">
                        Read More
                        </a>
                     </div>
