--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="headerSec">
+<header class="headerSec" *ngIf="headerData">
     <div class="main-container container">
        <div class="cstNavbar_sec">
           <nav class="navbar navbar-expand-lg p-0">
@@ -17,8 +17,8 @@
                 <ul class="navbar-nav ml-auto" *ngIf="headerData">
                     <li class="nav-item" *ngFor="let data of headerData.mainmenu;let i = index">
                        
-                      <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="data.link" *ngIf="data.name != 'Pet Health'">{{data.name}}</a>
-                      <a class="nav-link"  href="{{data.link}}" target="_blank" *ngIf="data.name == 'Pet Health'">{{data.name}}</a>
+                      <a class="nav-link" data-toggle="collapse" data-target=".navbar-collapse.show" [routerLink]="data.link" *ngIf="data.name != 'Pet  Health'">{{data.name}}</a>
+                      <a class="nav-link"  href="{{data.link}}" target="_blank" *ngIf="data.name == 'Pet  Health'">{{data.name}}</a>
                    </li> 
                    <!-- <li class="nav-item">
                       <a class="nav-link" href="https://ardemos.in/dcc/about-dcc">About DCC</a>
